# Algorithm-analysis

./: CMakeLists.txt  GraphPlotter.cpp  GraphPlotter.h  MultiGraphPlotter.cpp  MultiGraphPlotter.h  README.md  main.cpp
headers/: AlgorithmManager.h  Benchmark.h  BinarySearchTree.h  LinkedList.h  MultiGraphPlotter.h  SortAlgorithms.h  TestDataGenerator.h
source/: Benchmark.cpp  BinarySearchTree.cpp  LinkedList.cpp  SortAlgorithms.cpp  TestDataGenerator.cpp
source/algorithms/: BinarySearchTree.cpp  LinkedList.cpp  SortAlgorithms.cpp
source/plot/: MultiGraphPlotter.cpp
source/utilities/: AlgorithmManager.cpp  Benchmark.cpp  TestDataGenerator.cpp
